# GroundTruth

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ARCHITECTURE_AUDIT.md  CLAIMS.md  CONSTITUTION.md  DATASET_AUDIT.md  EVALUATION_QUALITY.md  EVOLUTION.md  POSITIONING.md  REPRODUCIBILITY.md  RESEARCH_POSITIONING.md  STRATEGY.md  THREATS_TO_VALIDITY.md  claims.yaml  debt.yaml  threats.yaml
experiments/: detector_quality_ci.py
groundtruth/: __init__.py  cli.py  demo_agents.py
runs/: assurance-report.md  baseline-hardened_agent.json  baseline-vulnerable_agent.json  detector-quality-judge-gemma3-4b.json  detector-quality-judge-llama3.1-8b.json  detector-quality.json  quality-manifest.json  report.html  scorecard-gemma3-4b-stateful.json  scorecard-gemma3-4b.json  scorecard-llama3.1-8b-stateful.json  scorecard-llama3.1-8b.json  scorecard-llama3.2-latest-stateful.json  scorecard-llama3.2-latest.json  scorecard-mistral-7b-stateful.json  scorecard-mistral-7b.json  scorecard-phi4-mini-stateful.json  scorecard-phi4-mini.json  scorecard-qwen3-4b-stateful.json  scorecard-qwen3-4b.json
tests/: conftest.py  test_ci.py  test_cli.py  test_detectors_v02.py  test_end_to_end.py  test_external_validation.py  test_judge.py  test_meta_assurance.py  test_meta_contracts.py  test_meta_graph.py  test_meta_loader.py  test_meta_manifest.py  test_meta_model.py  test_non_completion.py  test_ollama_agent.py  test_report.py  test_runner.py  test_steward_checks.py  (+8 more)
(+202 files in other folders)
