[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "groundtruth"
version = "0.8.0"
description = "Groundtruth — an AI reliability platform. AgentProbe: offline red-team evaluation for tool-using agents."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Sanjay", email = "sanmanivas@ucdavis.edu"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
keywords = ["ai-safety", "evaluation", "llm", "red-team", "agents", "reliability"]
requires-python = ">=3.11"
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
groundtruth = "groundtruth.cli:main"

[tool.setuptools.packages.find]
include = ["groundtruth*"]
